support multiple language and remove un necessary files

--- a/example/lib/l10n/intl_ar_EG.arb
+++ b/example/lib/l10n/intl_ar_EG.arb
@@ -1,4 +1,30 @@
 {
   "test": "تست",
-  "offline": "قافل"
+  "offline": "قافل",
+  "myGreatRooms": "كل المحادثات",
+  "thisDataFromMyServerNotVchat": "هذه الداتا من سيرفر خارجي",
+  "settings": "الاعدادات",
+  "home": "الرئيسيه",
+  "chats": "الدردشات",
+  "login": "تسجيل دخول",
+  "email": "البريد",
+  "password": "كلمه المرور",
+  "register": "تسجيل حساب",
+  "name": "الاسم",
+  "chooseImage": "اختار صوره",
+  "changeLanguage": "تغيسر اللغه",
+  "changeTheme": "تغير الثيم",
+  "updateProfile": "تحديث الحساب",
+  "on": "تشغيل",
+  "allChatNotifications": "كل اشعارات المحادثه",
+  "off": "ايقاف",
+  "update": "تحديث",
+  "message": "رساله",
+  "error": "خطا",
+  "ok": "تم",
+  "logOut": "تسجيل خروج",
+  "light": "ابيض عليك",
+  "dark": "اسود ع دماغك",
+  "ar": "عربي",
+  "en": "انجليزي"
 }
