--- a/example/lib/l10n/intl_en.arb
+++ b/example/lib/l10n/intl_en.arb
@@ -1,4 +1,30 @@
 {
   "test": "test",
-  "offline": "offline"
+  "offline": "offline",
+  "myGreatRooms": "My great rooms",
+  "thisDataFromMyServerNotVchat": "This data from my server not vchat",
+  "settings": "Settings",
+  "home": "Home",
+  "chats": "Chats",
+  "login": "login",
+  "email": "Email",
+  "password": "Password",
+  "register": "Register",
+  "name": "Name",
+  "chooseImage": "choose image",
+  "changeLanguage": "Change language",
+  "changeTheme": "Change Theme",
+  "updateProfile": "Update profile",
+  "on": "On",
+  "allChatNotifications": "All Chat notifications",
+  "off": "Off",
+  "update": "Update",
+  "message": "Message",
+  "error": "Error",
+  "ok": "Ok",
+  "logOut": "Log out",
+  "light": "light",
+  "dark": "dark",
+  "ar": "ar",
+  "en": "en"
 }
