--- a/example/lib/l10n/intl_ar_EG.arb
+++ b/example/lib/l10n/intl_ar_EG.arb
@@ -23,8 +23,8 @@
   "error": "خطا",
   "ok": "تم",
   "logOut": "تسجيل خروج",
-  "light": "ابيض عليك",
-  "dark": "اسود ع دماغك",
+  "light": "ابيض ",
+  "dark": "اسود ",
   "ar": "عربي",
   "en": "انجليزي"
 }
