* unread message count for group chat and single chat * leave group chat * group chat page which can update group name and upgrade users to admin if i the group creator and update group image * kick users from group * admin downgrade and upgrade system if iam admin * admins can add users only

--- a/example/lib/l10n/intl_ar_EG.arb
+++ b/example/lib/l10n/intl_ar_EG.arb
@@ -26,5 +26,38 @@
   "light": "ابيض ",
   "dark": "اسود ",
   "ar": "عربي",
-  "en": "انجليزي"
+  "en": "انجليزي",
+  "removeYourSelfFromTheListYourNameIs": "برجاء حذف اسمك من اللسته اسمك هوه",
+  "selectAtLestOneUser": "اختار علي الاقل شخص",
+  "chooseMembers": "اختار الاعضاء",
+  "chooseGroupImage": "اختار صوره للجروب",
+  "imageSizeMustBeLessThan20Mb": "يجب ان تكون الصوره اقل من 20 ميجا",
+  "imageHasBeenSelected": "تم اختيار الصوره",
+  "groupName": "اسم الجروب شات",
+  "createGroup": "انشاء جروب دردشه",
+  "usersHasBeenAddedSuccessfully": "تم اضافه العضو بنجاح",
+  "members": "الاعضاء",
+  "title": "العنوان",
+  "cancel": "الغاء",
+  "about": "عن",
+  "copiedToYourClipboarddata": "تم الحفظ",
+  "contactMeOnWhatsapp": "تواصل معي",
+  "areYouHaveQuestion": "هل لديك اساله ؟",
+  "codePrivateAndGroupChatWithVChatItsVery": "اناء محادثه خاصه وجروب دردشه في دقائق",
+  "vChatUsers": "الاعضاء",
+  "imageHasBeenSetSuccessfully": "تم اختيار الصوره",
+  "ourFullDocumentation": "اطلع علي كيفيه التشغيل",
+  "buyTheBackendCode": "قم بشراء نسخه",
+  "iosTestflightAndPublicFlutterUi": "ios testflight and public flutter ui",
+  "contactUsAndReportIssuesOrNewFeatures": "Contact Us And Report issues or new features",
+  "splashScreen": "splash screen",
+  "updateImage": "تحديث الصوره",
+  "newName": "الاسم الجديد",
+  "updateName": "تحديث الاسم",
+  "enterTheName": "ادخل الاسم",
+  "yourNameHasBeenUpdated": "تم تحديث الاسم ",
+  "yourImageHasBeenUpdated": "تم تحديث الصوره",
+  "userName": "اسم المستخدم",
+  "loading": "جاري التحميل ...",
+  "success": "نجت العمليه"
 }
