update translation system

--- a/core_packages/v_chat_sdk_sample/lib/l10n/intl_ar.arb
+++ b/core_packages/v_chat_sdk_sample/lib/l10n/intl_ar.arb
@@ -1,7 +1,7 @@
 {
   "hi": "هاي",
   "yesterdayLabel": "أمس",
-  "messageHasBeenDeletedLabel": "تم حذف الرسالة",
+  "messageHasBeenDeleted": "تم حذف الرسالة",
   "mute": "كتم",
   "cancel": "إلغاء",
   "typing": "يكتب",
@@ -26,5 +26,45 @@
   "you": "أنت",
   "kickedBy": "تم طرده بواسطة",
   "groupCreatedBy": "تم إنشاء المجموعة بواسطة",
-  "addedYouToNewBroadcast": "أضافك إلى بث جديد"
+  "addedYouToNewBroadcast": "أضافك إلى بث جديد",
+  ":-----": ":-----",
+  "download": "تحميل",
+  "copy": "نسخ",
+  "info": "معلومات",
+  "share": "مشاركة",
+  "forward": "إعادة توجيه",
+  "reply": "رد",
+  "deleteFromAll": "حذف من الجميع",
+  "deleteFromMe": "حذف مني",
+  "downloading": "جاري التحميل",
+  "fileHasBeenSavedTo": "تم حفظ الملف في",
+  "search": "بحث",
+  "unBlock": "إلغاء الحظر",
+  "block": "حظر",
+  "online": "متصل",
+  "members": "أعضاء",
+  "youDontHaveAccess": "ليس لديك حق الوصول",
+  "replyToYourSelf": "الرد على نفسك",
+  "repliedToYourSelf": "رد على نفسك",
+  "audioCall": "مكالمة صوتية",
+  "ring": "رنين",
+  "canceled": "ألغيت",
+  "timeout": "انتهت مهلة",
+  "rejected": "مرفوض",
+  "finished": "تم الانتهاء",
+  "inCall": "في المكالمة",
+  "sessionEnd": "انتهت الجلسة",
+  "yesterday": "أمس",
+  "today": "اليوم",
+  "textFieldHint": "اكتب رسالة",
+  "media": "وسائط",
+  "files": "ملفات",
+  "location": "موقع",
+  "shareMediaAndLocation": "مشاركة الوسائط والموقع",
+  "thereIsVideoSizeBiggerThanAllowedSize": "يوجد حجم الفيديو أكبر من الحجم المسموح به",
+  "thereIsFileHasSizeBiggerThanAllowedSize": "يوجد ملف بحجم أكبر من الحجم المسموح به",
+  "makeCall": "إجراء مكالمة",
+  "areYouWantToMakeVideoCall": "هل تريد إجراء مكالمة فيديو؟",
+  "areYouWantToMakeVoiceCall": "هل تريد إجراء مكالمة صوتية؟",
+  "vMessagesInfoTrans": "رسائل صوتية"
 }
