--- a/core_packages/v_chat_sdk_sample/lib/l10n/intl_en.arb
+++ b/core_packages/v_chat_sdk_sample/lib/l10n/intl_en.arb
@@ -1,7 +1,7 @@
 {
   "hi": "Hi",
   "yesterdayLabel": "yesterday",
-  "messageHasBeenDeletedLabel": "Message has been deleted",
+  "messageHasBeenDeleted": "Message has been deleted",
   "mute": "Mute",
   "cancel": "Cancel",
   "typing": "typing...",
@@ -26,5 +26,45 @@
   "you": "You",
   "kickedBy": "kicked by",
   "groupCreatedBy": "Group created by",
-  "addedYouToNewBroadcast": "added you to new broadcast"
+  "addedYouToNewBroadcast": "added you to new broadcast",
+  ":-----": ":-----",
+  "download": "Download",
+  "copy": "Copy",
+  "info": "Info",
+  "share": "Share",
+  "forward": "Forward",
+  "reply": "Reply",
+  "deleteFromAll": "Delete from all",
+  "deleteFromMe": "Delete from me",
+  "downloading": "Downloading...",
+  "fileHasBeenSavedTo": "File has been saved to",
+  "search": "Search",
+  "unBlock": "Unblock",
+  "block": "Block",
+  "online": "Online",
+  "members": "Members",
+  "youDontHaveAccess": "You don't have access",
+  "replyToYourSelf": "Reply to your self",
+  "repliedToYourSelf": "Replied to your self",
+  "audioCall": "Audio call",
+  "ring": "Ring",
+  "canceled": "Canceled",
+  "timeout": "Timeout",
+  "rejected": "Rejected",
+  "finished": "Finished",
+  "inCall": "In call",
+  "sessionEnd": "Session end",
+  "yesterday": "Yesterday",
+  "today": "Today",
+  "textFieldHint": "Type a message",
+  "media": "Media",
+  "files": "Files",
+  "location": "Location",
+  "shareMediaAndLocation": "Share media and location",
+  "thereIsVideoSizeBiggerThanAllowedSize": "There is video size bigger than allowed size",
+  "thereIsFileHasSizeBiggerThanAllowedSize": "There is file has size bigger than allowed size",
+  "makeCall": "Make call",
+  "areYouWantToMakeVideoCall": "Are you want to make video call?",
+  "areYouWantToMakeVoiceCall": "Are you want to make voice call?",
+  "vMessagesInfoTrans": "Messages info"
 }
